@@ -146,84 +146,6 @@ class Database(DatabaseInterface):
                 RE_VERSION.search(version).groups()))
         return self._version_cache[self.name]
 
-    @staticmethod
-    def dump(database_name):
-        from trytond.tools import exec_command_pipe
-
-        cmd = ['pg_dump', '--format=c', '--no-owner']
-        env = {}
-        uri = parse_uri(config.get('database', 'uri'))
-        if uri.username:
-            cmd.append('--username=' + uri.username)
-        if uri.hostname:
-            cmd.append('--host=' + uri.hostname)
-        if uri.port:
-            cmd.append('--port=' + str(uri.port))
-        if uri.password:
-            # if db_password is set in configuration we should pass
-            # an environment variable PGPASSWORD to our subprocess
-            # see libpg documentation
-            env['PGPASSWORD'] = uri.password
-        cmd.append(database_name)
-
-        pipe = exec_command_pipe(*tuple(cmd), env=env)
-        pipe.stdin.close()
-        data = pipe.stdout.read()
-        res = pipe.wait()
-        if res:
-            raise Exception('Couldn\'t dump database!')
-        return data
-
-    @staticmethod
-    def restore(database_name, data):
-        from trytond.tools import exec_command_pipe
-
-        database = Database().connect()
-        connection = database.get_connection(autocommit=True)
-        database.create(connection, database_name)
-        database.close()
-
-        cmd = ['pg_restore', '--no-owner']
-        env = {}
-        uri = parse_uri(config.get('database', 'uri'))
-        if uri.username:
-            cmd.append('--username=' + uri.username)
-        if uri.hostname:
-            cmd.append('--host=' + uri.hostname)
-        if uri.port:
-            cmd.append('--port=' + str(uri.port))
-        if uri.password:
-            env['PGPASSWORD'] = uri.password
-        cmd.append('--dbname=' + database_name)
-        args2 = tuple(cmd)
-
-        if os.name == "nt":
-            tmpfile = (os.environ['TMP'] or 'C:\\') + os.tmpnam()
-            with open(tmpfile, 'wb') as fp:
-                fp.write(data)
-            args2 = list(args2)
-            args2.append(' ' + tmpfile)
-            args2 = tuple(args2)
-
-        pipe = exec_command_pipe(*args2, env=env)
-        if not os.name == "nt":
-            pipe.stdin.write(data)
-        pipe.stdin.close()
-        res = pipe.wait()
-        if res:
-            raise Exception('Couldn\'t restore database')
-
-        database = Database(database_name).connect()
-        cursor = database.get_connection().cursor()
-        if not database.test():
-            cursor.close()
-            database.close()
-            raise Exception('Couldn\'t restore database!')
-        cursor.close()
-        database.close()
-        Database._list_cache = None
-        return True
-
     def list(self):
         now = time.time()
         timeout = config.getint('session', 'timeout')
